rrr (1.22-14) bullseye; urgency=medium

  * RUNNING RELEASE

  * Features:
    * Option in httpclient to silence error messages for PUT queries for a
      specified amount of time
    * New topic_filter_invert option
    * Support message expiry interval in v5 in MQTT broker

  * Improvements:
    * Files in message database stored in a tree structure based on their hash
      filename for performance.
    * Asynchrounous operation in message DB for better performance with very large DBs

  * Fixes:
    * Prevent HTTP client from getting killed of if there are a lot of
      connection errors
    * Deadlock in mmap channel due to incorrect use of lock() instead of trylock()
    * Lockup in cmodules in high traffic situations
    * Sometimes temporary lockup in HTTP-server if there is not immediate downstream
      response to an h2c upgrade.

 -- LBSdrift <lbsdrift@posten.local>  Thu, 18 Nov 2021 23:45:42 +0100

rrr (1.21-1) bullseye; urgency=medium

  * Changes:
    * Automatic restart of RRR deamon upon failure
    * Use JEmalloc instead of internal allocator

  * Features:
    * Option in cacher to revive messages older than a specified age
    * Control maximum response size in httpclient
    * Control maximum request size in httpserver
    * Control content-type for raw requests in httpclient
    * Control which readers that will receive the different kinds of messages from cacher

  * Improvements:
    * Performance for larger messages in misc. modules

  * Fixes:
    * Busy-waiting on thread state change causing long startup times
    * Cacher getting killed off on large writes to message DB
    * Large messages sometimes failing to be sent due to incorrect
      return values in some send functions
    * Send allow-origin header in OPTIONS responses to satisfy preflight checks
    * Validate message header checksum in rrr_msg tool
    * Manual page for rrr_msg tool
    * Crash in rrr_msg as it tried to read from directories