@@ -29,6 +29,7 @@ socket_unlink_if_exists=yes
 
 # This instance connects with TLS and verifies with ca_file
 # Also, test built-in topic filter done when polling from sender
+# Retain flag will be set in the publish although retain is not explicitly tested
 [instance_mqtt_client_publish_raw]
 module=mqttclient
 senders=instance_socket
@@ -38,6 +39,7 @@ mqtt_server_port=8884
 mqtt_publish_topic=x/
 mqtt_publish_topic_prepend=yes
 mqtt_publish_array_values=*
+mqtt_retain_tag=sep1
 mqtt_client_identifier=instance_mqtt_client_publish_raw
 mqtt_version=5
 mqtt_transport_type=tls
